# shared_singleton

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  singleton.rs
